--- a/public/sass/base/_utilities.scss
+++ b/public/sass/base/_utilities.scss
@@ -83,8 +83,8 @@
 }
 
 .u-text-white{color: $white;}
-.u-text-lightest-gray{color: $light-blue;}
-.u-text-light-blue{color: $medium-blue;}
+.u-text-lightest-gray{color: $light-thistle;}
+.u-text-light-blue{color: $medium-dark-queen-pink;}
 
 .u-text-small{font-size: .8rem !important;}
 
