--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -2,20 +2,33 @@
 
 
 $white: #edf5ff;
-$black: #001141;
+$black: #130b1e;
 
-$light-blue: #d0e2ff;
-$lightish-blue: #a6c8ff;
-$medium-lightish-blue: #92baff;
-$medium-light-blue: #78a9ff;
-$medium-blue: #4589ff;
+$light-thistle: #E3D8F1;
+$lightish-thistle: #d4c3e9;
+$medium-thistle: #9c79cd;
+$dark-thistle: #4b2c77;
+$darker-thistle: #26163c;
+$darkest-thistle: #1c112d;
 
-$dark-blue: #0f62fe;
-$darker-blue: #0043ce;
-$darker-mute-blue: #1453d1;
-$darkester-blue: #002d9c;
-$second-darkest-blue: #01288a;
-$darkest-blue: #001d6c;
+
+$light-queen-pink: #DABECA;
+$medium-queen-pink: #c397aa;
+$medium-dark-queen-pink: #b57d95;
+
+
+$light-tuscany: #C79A94;
+$medium-tuscany: #BF8B85;
+$medium-dark-tuscany: #B98079;
+$dark-tuscany: #93564D;
+$darker-tuscany: #502F2A;
+$darkest-tuscany: #35201c;
+$black-tuscany: #0d0807;
+
+$coldish-dark-tuscany: #4f2d2c;
+$colder-dark-tuscany: #4d2d2e;
+$cold-dark-tuscany: #462f34;
+// $cold-dark-tuscany: #492c32;
 
 
 
@@ -32,11 +45,11 @@ $default-font-size: 1.6rem;
 
 
 // B O X   S H A D O W
-$box-shadow-small-light: 0 1rem 2rem rgba($color: $darkester-blue, $alpha: .15);
-$box-shadow-light: 0 1.5rem 4rem rgba($color: $darkester-blue, $alpha: .15);
-$box-shadow-medium: 0 1.5rem 4rem rgba($color: $darkester-blue, $alpha: .20);
-$box-shadow-dark: 0 1.5rem 4rem rgba($color: $darkester-blue, $alpha: .25);
-$box-shadow-big-dark: 0 2rem 4rem rgba($color: $darkester-blue, $alpha: .4);
+$box-shadow-small-light: 0 1rem 2rem rgba($color: $dark-tuscany, $alpha: .15);
+$box-shadow-light: 0 1.5rem 4rem rgba($color: $dark-tuscany, $alpha: .15);
+$box-shadow-medium: 0 1.5rem 4rem rgba($color: $dark-tuscany, $alpha: .20);
+$box-shadow-dark: 0 1.5rem 4rem rgba($color: $dark-tuscany, $alpha: .25);
+$box-shadow-big-dark: 0 2rem 4rem rgba($color: $dark-tuscany, $alpha: .4);
 
 
 // C O M P O N E N T   V A R I A B L E S
