--- a/public/sass/components/_popup.scss
+++ b/public/sass/components/_popup.scss
@@ -24,8 +24,8 @@
     &__content{
         width: 65%;
         height: 70rem;
-        border: 1px solid $medium-blue;
-        background-color: $darkest-blue;
+        border: 1px solid $medium-dark-queen-pink;
+        background-color: $darkest-tuscany;
         box-shadow: $box-shadow-dark;
         border-radius: $border-radius-sm;
         opacity: 0;
@@ -62,13 +62,13 @@
         height: 50rem;
         display: block;
         object-fit: cover;
-        border: .1rem solid $medium-light-blue;
+        border: .1rem solid $medium-queen-pink;
 
         &--headshot{
             float: right;
             width: 40%;
             padding: 2rem;
-            border: .1rem dashed $medium-light-blue;
+            border: .1rem dashed $medium-queen-pink;
             margin: 0 0 4rem 4rem;
 
             @include respond(phone){
@@ -88,19 +88,19 @@
         &--bio{
             line-height: 2.9rem;
             text-align: left;
-            color: $lightish-blue;
+            color: $lightish-thistle;
         }
     }
 
     &__link{
         font-weight: 400;
         font-size: medium;
-        color: $light-blue;
+        color: $light-thistle;
         text-decoration: none;
 
         @media (any-hover:hover){
             :hover{
-                color: $lightish-blue
+                color: $lightish-thistle
             }
         }
     }
@@ -135,7 +135,7 @@
             top: 2rem;  
             right: 3rem;
             text-decoration: none;
-            color: $medium-light-blue; 
+            color: $medium-queen-pink; 
             font-size: 6rem;
             font-weight: 400 ;
             line-height: 1;
@@ -143,7 +143,7 @@
         }
 
         &:hover{
-            color: $light-blue;
+            color: $light-thistle;
         }
     }
 
