plain scaffold, neutral color palette

--- a/public/sass/layout/_footer.scss
+++ b/public/sass/layout/_footer.scss
@@ -5,7 +5,7 @@
     width: 100%;
     margin-top: 10rem;
     padding: 8rem;
-    background-color: $colder-dark-tuscany;
+    background-color: $dark-tuscany;
     font-size: 1.4rem;
 
     &__logo-box{
